syntax = "proto3";

package user.service.v1;

import "google/api/annotations.proto";


option go_package = "ki-book/api/user/service/v1;v1";


service User {
  rpc GetUser(GetUserReq)returns (GetUserReply){}
  rpc CreateUser(CreateUserReq)returns(CreateUserReply){}
  rpc VerifyPassword(VerifyPasswordReq)returns(VerifyPasswordReply){}
}

message GetUserReq{
  int64 id=1;
}

message GetUserReply {
  int64 id = 1;
  string name = 2;
  uint64 age = 3;
  string phone = 4;
}

message CreateUserReq{
  int64 id = 1;
  string name = 2;
  uint64 age = 3;
  string phone = 4;
  string password = 5;
}

message CreateUserReply{
  int64 id = 1;
  string name = 2;
  uint64 age = 3;
  string phone = 4;
}

message VerifyPasswordReq{
  string name = 1;
  string password = 2;
}

message VerifyPasswordReply{
  bool result =1;
  int64 id = 2;
}